
-Better user experience when editing the main config.php file manually (in a text editor...no init code at top / bottom anymore)

-More reliable top-level domain name checks (no need to map TLD extensions in the Admin Config 'Developer' section anymore)

-New CORS 'Access-Control-Allow-Origin' setting (controls what web domains can load this app's AJAX scripts, etc)

-New Admin Config section for Security settings (and moved all security-related settings into it)

-More reliable cookie configuration (on varying server setups)

-Miscellaneous user experience improvements

-Code cleanup / optimizations

-New / improved documentation

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.4:

-BUG FIX: Fixed edge-case when cancelling updating of user data, while background tasks are still running (no longer hangs on 'reloading...' notice)

-BUG FIX: Fixed removing old / stale error and debugging log files saved in /cache/logs/error/ and /cache/logs/debug/

-Miscellaneous user experience improvements

-Cleanup in default demo config

-Improved documentation

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------



-------------------------------------------------------------------
6.00.5:

-BUG FIX: Fixed background tasks overloading low power devices on fresh installations

-Cleanup and additions in default demo config

-Miscellaneous user experience improvements

v6.00.2 AND HIGHER RESETS LIGHT (TIME PERIOD) CHARTS FROM ARCHIVAL DATA, ONE-TIME DURING UPGRADES FROM V6.00.1 OR LOWER.

-------------------------------------------------------------------






